--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="essentials">
 			<ul>
 				<li class="message">
-					When out in the backcountry, make sure you always have these ten essentials with you. You prevent incidents and mitigate risk by planning for worse conditions than what you expect.
+					When out in the backcountry, make sure you always have these ten essentials with you. You can prevent incidents and mitigate risk by planning for worse conditions than what you expect.
 				</li>
 				<li>
 					<i class="icon-move"></i>
